:pencil: add backup_ssh_cmnd and update hashes

--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -4,10 +4,16 @@
     url: "{{ runlevel_backup_github_url }}/opt/runlevel_backup/backup.sh"
     dest: "{{ runlevel_backup_install_dir }}/backup.sh"
     mode: 0550
-    checksum: md5:767a0f52b12e8ce600526df4b8d101a3
+    checksum: md5:006a319353074abb8afd2aefe2f9a8cb
 - name: Download backup.lib
   get_url:
     url: "{{ runlevel_backup_github_url }}/opt/runlevel_backup/backup.lib"
     dest: "{{ runlevel_backup_install_dir }}/backup.lib"
     mode: 0440
-    checksum: md5:f901d5c2353e39966c7f280022efd664
+    checksum: md5:e56983b661d324863f7e8ee83973b2e7
+- name: Download backup_ssh_cmnd.sh
+  get_url:
+    url: "{{ runlevel_backup_github_url }}/opt/runlevel_backup/backup_ssh_cmnd.sh"
+    dest: "{{ runlevel_backup_install_dir }}/backup_ssh_cmnd.sh"
+    mode: 0440
+    checksum: md5:baf1153035df59defc6145b9c92102ac
